--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "build": "babel src -o lib/index.js",
     "demo": "webpack demo/jsx/demo.jsx demo/js/demo.js --module-bind 'jsx=babel?stage=0' -w",
     "test": "babel-node test/lib/index.js | tap-spec",
-    "travis": "npm run test",
-    "prepublish": "npm run build"
+    "test:watch": "nodemon --exec \"babel-node test/lib/index.js | tap-spec\" -w test/lib/index.js",
+    "travis": "npm run coveralls",
+    "prepublish": "npm run build",
+    "coverage": "babel-node node_modules/.bin/isparta cover --report lcovonly test/lib/index.js | tap-spec",
+    "coveralls": "npm run coverage && coveralls < coverage/lcov.info && rimraf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -37,6 +40,10 @@
     "babel-loader": "^5.3.2",
     "gulp": "latest",
     "gulp-connect": "latest",
+    "isparta": "^3.0.4",
+    "istanbul": "^0.3.21",
+    "jsdom": "^6.5.1",
+    "rimraf": "^2.4.3",
     "tap-spec": "^4.1.0",
     "tape": "^4.2.0",
     "webpack": "^1.11.0"
