--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel": "^5.8.21",
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
+    "coveralls": "^2.11.4",
     "gulp": "latest",
     "gulp-connect": "latest",
     "isparta": "^3.0.4",
