--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "watch": "babel src -o lib/index.js -w",
     "build": "babel src -o lib/index.js",
-    "demo": "webpack demo/jsx/demo.jsx demo/js/demo.js --module-bind 'jsx=babel?stage=0' -w",
-    "test": "babel-node test/lib/index.js | tap-spec",
-    "test:watch": "nodemon --exec \"babel-node test/lib/index.js | tap-spec\" -w test",
+    "demo": "webpack -w",
+    "test": "ava test/lib/index.js",
+    "test:watch": "nodemon --exec \"ava test/lib/index.js\" -w test",
     "travis": "npm run coveralls",
     "prepublish": "npm run build",
     "coverage": "babel-node node_modules/.bin/isparta cover --report lcovonly test/lib/index.js | tap-spec",
@@ -33,9 +33,11 @@
   "homepage": "https://github.com/isnifer/foma#readme",
   "dependencies": {
     "foma-warning": "0.x",
-    "react": "0.14.x"
+    "react": "0.14.x",
+    "valya": "isnifer/valya#0bed299"
   },
   "devDependencies": {
+    "ava": "^0.4.2",
     "babel": "^5.8.21",
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
@@ -51,7 +53,6 @@
     "rimraf": "^2.4.3",
     "tap-spec": "^4.1.0",
     "tape": "^4.2.0",
-    "valya": "0.2.x",
     "webpack": "^1.11.0"
   }
 }
