--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test:watch": "nodemon --exec \"ava test/lib/index.js\" -w test",
     "travis": "npm run coveralls",
     "prepublish": "npm run build",
-    "coverage": "babel-node node_modules/.bin/isparta cover --report lcovonly test/lib/index.js | tap-spec",
+    "coverage": "babel-node node_modules/.bin/isparta cover --report lcovonly test/lib/index.js",
     "coverage:watch": "nodemon --exec \"npm run coverage\" -w test",
     "coveralls": "npm run coverage && coveralls < coverage/lcov.info && rimraf ./coverage"
   },
